apps/personal-site/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-site
  namespace: personal-site
spec:
  selector:
    app: personal-site
    component: web
  ports:
    - name: http
      port: 80
      targetPort: 3000
